2005-06-23  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c: escape strings during insertion (closes: #222).

2005-06-21  Paul Stevens <paul@nfg.nl>

	* db.c, pgsql/dbpgsql.c, server.c, mysql/dbmysql.c: minor cleanups. 
	
2005-06-20  Paul Stevens <paul@nfg.nl>

	* Makefile.am, dm_cidr.c, dm_cidr.h, misc.c, check_dbmail_server.c: support
	cidr notation in usermap sock_allow/sock_deny fields.
	* mime.c: minor cleanups.
	* misc.h, db.c, dm_cidr.c, check_dbmail_server.c, misc.c: use best match 
	on sock_allow in db_usermap_resolve.
	
2005-06-17  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, pgsql/dbpgsql.c, sql/postgresql/add_replycache.pgsql,
	sql/mysql/add_replycache.mysql, sqlite/dbsqlite.c, pipe.c,
	mysql/dbmysql.c: cleaned up the auto-reply code so we behave like a
	good net citizen.
	
2005-06-16  Paul Stevens <paul@nfg.nl>

	* auth/authsql.c, auth/authldap.c (auth_check_user_ext): added loop
	detection.
	* dsn.c, dbmail-user.c: start auth_check_user_ext with check at zero
	instead of minus one.
	* mime.c (mail_address_build_list): cleanup using gmime.

2005-06-14  Paul Stevens <paul@nfg.nl>

	* dbmail-user.c, db.c, list.c, auth/authldap.c, dbmail-imapsession.c,
	misc.c: added check when looping over GLists to avoid memory leakage.
	* dbmail-message.c, dbmail-message.h: added header caching of to, cc, 
	from and replyto fields.

2005-06-07  Paul Stevens <paul@nfg.nl>

	* many files: added ip-based virtual hosting and user-mapping.

2005-05-31  Paul Stevens <paul@nfg.nl>
	
	* imaputils.c (date_sql2imap): revert to gnuish behavior which should
	work just fine on linux and bsd (closes #79).

2005-05-30  Paul Stevens <paul@nfg.nl>

	* imapcommands.c (_ic_expunge): return non-fatal error in case of NO
	response.
	
2005-05-25  Paul Stevens <paul@nfg.nl>

	* db.h, db.c, auth/authsql.c, auth/authldap.c,
	sql/mysql/add_usermap.mysql, sql/mysql/create_tables_innoDB.mysql, 
	sql/postgresql/add_usermap.pgsql, sql/postgresql/create_tables.pgsql: